contrast error fixed

--- a/lesson3/styles/style.css
+++ b/lesson3/styles/style.css
@@ -87,7 +87,7 @@ p {
 
 #gold {
     background-color: #957C3D;
-    color: white;
+    color: black;
     height: 5rem;
     text-align: center;
     display: flex;
